<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">parcial-1-am-acn4bv-sanchez-yegros</string>
    <string name="Text_Start">la app para mirar tus series y \npeliculas gratis!</string>
    <string name="Title_Text">Streamix.</string>
    <string name="text_home">Que te gustaría ver hoy?</string>
    <string name="textHome_pelisNuevas">Peliculas Nuevas</string>
    <string name="textHome_pelisReco">Peliculas Recomendadas</string>
    <string name="text_movieTitle">Joker</string>
    <string name="text_movieInfo">Arthur Fleck, a party clown, leads an impoverished life with his ailing mother.
        However, when society shuns him and brands him as a freak, he decides to embrace the life of crime and chaos.</string>
    <string name="text_movieTitle2">Pearl</string>
    <string name="text_movieInfoPearl">Trapped on an isolated farm, Pearl must tend to her ailing father under the watch of her mother.
        Lusting for the glamorous life she has seen in movies, Pearl temptations and repressions collide.</string>
    <string name="text_movieTitle3">Joy</string>
    <string name="text_movieInfoJoy">Following her divorce, a woman faces numerous challenges as she aims to set up a successful business empire. However,
        she manages to overcome all the odds and fulfil her dream.</string>
    <string name="text_movieTitle4">Moonlight</string>
    <string name="text_movieInfoMoonlight">Chiron, a young African-American boy, finds guidance in Juan, a drug dealer, who teaches him to carve
        his own path.</string>
    <string name="text_movieTitle5">MidSommar</string>
    <string name="text_movieInfoMid">A couple travel to Sweden to visit their friend rural hometown for
        midsummer festival, but what begins as an idyllic retreat quickly devolves into an increasingly violent and bizarre competition.</string>
    <string name="text_movieTitle6">Back to the Future</string>
    <string name="text_movieInfoBack">In the 1980s, an experiment by a weird scientist turns out to be faulty.
        It leads to his teenaged pal going back in time to the 1950s where he is forced to reunite the younger version of his parents.</string>
    <string name="contentButton">Mi Botón</string>
    <string name="button_Title">INGRESAR</string>
    <string name="Image_Start">Imagen</string>
    <string name="title_activity_screen_contact_us">Screen_ContactUs</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="streamix">Streamix</string>
</resources>