<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Screen_Info_Pearl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="7dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="59dp"
                android:layout_height="30dp"
                android:layout_weight="15"
                android:contentDescription="@string/Image_Start"
                android:onClick="backMainPage"
                app:srcCompat="@drawable/left_arrow_svgrepo_com"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />

            <TextView
                android:id="@+id/textViewUserPearl"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_weight="50"
                android:text="Usuario"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/CerrarSesionPearl"
                android:layout_width="110dp"
                android:layout_height="48dp"
                android:layout_weight="15"
                android:onClick="LogOuTClick"
                android:text="Cerrar Sesion"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="100"
                    app:cardBackgroundColor="@color/black">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gradient_background"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/pearlText"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginVertical="200dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="10sp"
                            android:paddingLeft="7dp"
                            android:text="@string/text_movieInfoPearl"
                            android:textAlignment="textStart"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/pearl"
                        android:layout_width="match_parent"
                        android:layout_height="179dp"
                        android:layout_gravity="top"
                        android:layout_weight="1"
                        android:contentDescription="@string/textHome_pelisNuevas"
                        app:srcCompat="@drawable/movie4" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trailer"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="Mirar Trailer"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:verticalScrollbarPosition="left" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <VideoView
                        android:id="@+id/videoViewPearl"
                        android:layout_width="match_parent"
                        android:layout_height="244dp" />
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>